# q-api-auth

./: Cargo.toml  Containerfile  Rocket.toml  TODO.md  build.sh  compose.yaml  rest.http  rustfmt.toml
src/: main.rs
src/app/: mod.rs  server.rs
src/app/modules/: mod.rs  routing.rs
src/app/modules/auth/: controller.rs  mod.rs
src/app/modules/auth/handlers/: global.rs  interv.rs  mod.rs
src/app/modules/auth/models/: auth.rs  credentials.rs  mod.rs
src/app/providers/config/: cors.rs  getter.rs  mod.rs
src/app/providers/models/: center.rs  mod.rs  project.rs  user.rs
src/app/providers/services/auth/: claims.rs  db.rs  error.rs  guard.rs  mod.rs  token.rs
