[package]
name = "q-api-super"
version = "0.1.5"
edition = "2021"

[features]
default = []
auth = ["jsonwebtoken"]

[dependencies]
chrono = { version = "0.4.34", features = ["serde", "clock"] }
jsonwebtoken = { version = "9.2.0", optional = true }
rocket = { version = "0.5.0", features = ["json", "secrets", "uuid"] }
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = "1.2.0"
