[package]
name = "q-api-auth"
version = "0.1.6"
edition = "2021"

[dependencies]
chrono = { version = "0.4.34", features = ["serde", "clock"] }
jsonwebtoken = "9.2.0"
rocket = { version = "0.5.0", features = ["json", "secrets", "uuid"] }
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = "1.3.0"
